# hatch-demo

./: .gitignore  LICENSE.txt  README.md  hatch_build.py  pyproject.toml
hatch-openapi-version/: hatch_openapi_version.py  pyproject.toml
src/hatch_demo/: __init__.py  __main__.py  hello.py  hooks.py
src/hatch_demo/spec/: openapi.yaml
tests/: __init__.py
